# ultrasound-measurements

./: README.md
Acquire_Ultrasound_LabVIEW/: Aquire Ultrasound NI Scope Non timed.vi  Aquire Ultrasound NI Scope.vi  Aquire Ultrasound.lvproj
Acquire_Ultrasound_LabVIEW/Communication/: Acquire waveform.vi
Acquire_Ultrasound_LabVIEW/Controls/: Display States.ctl  Intensity Chart Scale.ctl
acquire-ultrasound-matlab-app/: Picoscope5000a_ConfigureAWG.m  trimpath.m
acquire-ultrasound-python/: US_2022_04_10_test.wfm  ps5000a_ultrasound_wrappers.py  write_wfm_to_file.py
acquire_impedance/: README.md
acquire_ultrasound/: README.md
acquire_ultrasound/python/acquire-ultrasound-untested/: pyproject.toml
acquire_ultrasound/python/acquire-ultrasound-untested/src/: __init__.py  acquire_ultrasound.py  aquire_ultrasound_gui.ui  ps5000a_ultrasound_wrappers.py  us_utilities.py
acquire_ultrasound_matlab_app/: AcquirePulses_Picoscope5000a.mlapp  AcquirePulses_Picoscope5000a_exported.m  AcquirePulses_Picoscope5000a_wfm.mlapp  FindFilename.m  Picoscope5000a_AWGOnOff.m  Picoscope5000a_Configure.m  Picoscope5000a_FindVrange.m  Picoscope5000a_GetVranges.m  Picoscope5000a_SetTimebase.m  Picoscope5000a_SetTrigger.m  Picoscope5000a_Test_Signalgenerator.m  Readme.txt  micro.m  milli.m  savewfm.m
acquire_ultrasound_python/: US_2020_06_26_0240.wfm  us_utilities.py
hydrophone_scanning_onda_aims_iii/: README.md
impedance-measurements/: README.md
lyncee-dhm-processing/: binkoala.py
lyncee_dhm_processing/: README.md  binkoala.py  dhm-vertical-scaling.ipynb
(+320 files in other folders)
